--- a/src/index.css
+++ b/src/index.css
@@ -51,13 +51,19 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+html,
 body {
+  height: 100%;
   margin: 0;
+  overflow: hidden;
+}
+
+body {
   display: flex;
   place-items: center;
   min-width: 320px;
-  min-height: 100vh;
-  min-height: 100dvh;
+  height: 100vh;
+  height: 100dvh;
   background-color: var(--bg-color);
   color: var(--text-color);
 }
